--- a/KB.Entity/App.config
+++ b/KB.Entity/App.config
@@ -14,4 +14,6 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<connectionStrings><add name="KBEntities" connectionString="metadata=res://*/KBDataContext.csdl|res://*/KBDataContext.ssdl|res://*/KBDataContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=KB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+  <connectionStrings>
+  </connectionStrings>
+</configuration>
