--- a/KB.WebApi/Web.config
+++ b/KB.WebApi/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="KBEntities" connectionString="metadata=res://*/KBDataContext.csdl|res://*/KBDataContext.ssdl|res://*/KBDataContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=KB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="KBDataContext" connectionString="data source=localhost;initial catalog=KB;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
