--- a/KB.Repository/KB.Repository.csproj
+++ b/KB.Repository/KB.Repository.csproj
@@ -59,9 +59,8 @@
     <Compile Include="IRepositoryBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ArticleRepository.cs" />
+    <Compile Include="Repositories\IArticleRepository.cs" />
     <Compile Include="RepositoryBase.cs" />
-    <Compile Include="RepositoryIocFacility.cs" />
-    <Compile Include="RepositoryIocInstaller.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
@@ -76,6 +75,10 @@
     <ProjectReference Include="..\KB.Entity\KB.Entity.csproj">
       <Project>{fb079767-3df2-435c-89d3-e15f3d975098}</Project>
       <Name>KB.Entity</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\KB.Infrastructure\KB.Infrastructure.csproj">
+      <Project>{fe79d2df-6b23-4278-9c84-fc1d6487c45b}</Project>
+      <Name>KB.Infrastructure</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
