support get token and refresh token use OAuth2.0 (by user password)

--- a/KB.Infrastructure/KB.Infrastructure.csproj
+++ b/KB.Infrastructure/KB.Infrastructure.csproj
@@ -62,5 +62,9 @@
   <ItemGroup>
     <Analyzer Include="..\packages\Castle.Core.3.3.0\lib\net45\Castle.Core.dll" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Authentication\" />
+    <Folder Include="Authorization\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
