--- a/KB.WebApi/packages.config
+++ b/KB.WebApi/packages.config
@@ -13,6 +13,7 @@
   <package id="Microsoft.ApplicationInsights.Web" version="2.2.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.2.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.2.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
@@ -34,6 +35,7 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.3" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Cors" version="3.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security" version="3.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net45" />
