--- a/KB.Infrastructure/KB.Infrastructure.csproj
+++ b/KB.Infrastructure/KB.Infrastructure.csproj
@@ -36,7 +36,27 @@
     <Reference Include="Castle.Windsor">
       <HintPath>..\packages\Castle.Windsor.3.4.0\lib\net45\Castle.Windsor.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Owin, Version=3.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Owin.3.1.0\lib\net45\Microsoft.Owin.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Owin.Security, Version=3.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Owin.Security.3.1.0\lib\net45\Microsoft.Owin.Security.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Owin.Security.OAuth, Version=3.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Owin.Security.OAuth.3.1.0\lib\net45\Microsoft.Owin.Security.OAuth.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
+      <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -47,6 +67,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Api\ApiResult.cs" />
+    <Compile Include="Authentication\Client.cs" />
+    <Compile Include="Authentication\AuthorizationServerProvider.cs" />
+    <Compile Include="Authentication\TestClaimsIdentity.cs" />
+    <Compile Include="Authentication\IClientStore.cs" />
+    <Compile Include="Authentication\TestClientStore.cs" />
+    <Compile Include="Authentication\TestRefreshTokenStore.cs" />
+    <Compile Include="Authentication\IRefreshTokenStore.cs" />
+    <Compile Include="Authentication\RefreshToken.cs" />
+    <Compile Include="Authentication\RefreshTokenProvider.cs" />
     <Compile Include="ErrorInfo.cs" />
     <Compile Include="Ioc\KBInstaller.cs" />
     <Compile Include="Ioc\RepositoryIocFacility.cs" />
@@ -63,7 +92,6 @@
     <Analyzer Include="..\packages\Castle.Core.3.3.0\lib\net45\Castle.Core.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Authentication\" />
     <Folder Include="Authorization\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
