--- a/KB.Infrastructure/packages.config
+++ b/KB.Infrastructure/packages.config
@@ -2,4 +2,10 @@
 <packages>
   <package id="Castle.Core" version="3.3.0" targetFramework="net452" />
   <package id="Castle.Windsor" version="3.4.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security" version="3.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.OAuth" version="3.1.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
 </packages>
