involving domain service and dto.

--- a/KB.Infrastructure/KB.Infrastructure.csproj
+++ b/KB.Infrastructure/KB.Infrastructure.csproj
@@ -77,9 +77,10 @@
     <Compile Include="Authentication\RefreshToken.cs" />
     <Compile Include="Authentication\RefreshTokenProvider.cs" />
     <Compile Include="ErrorInfo.cs" />
+    <Compile Include="Ioc\DomainServiceIocFacility.cs" />
     <Compile Include="Ioc\KBInstaller.cs" />
     <Compile Include="Ioc\RepositoryIocFacility.cs" />
-    <Compile Include="Ioc\ServiceIocFacility.cs" />
+    <Compile Include="Ioc\AppServiceIocFacility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime\Checker.cs" />
     <Compile Include="Runtime\Security\ClaimsIdentityExtensions.cs" />
