--- a/KB.WebApi/KB.WebApi.csproj
+++ b/KB.WebApi/KB.WebApi.csproj
@@ -46,6 +46,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=6.0.2.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.6.0.2\lib\net45\AutoMapper.dll</HintPath>
+    </Reference>
     <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\Castle.Core.3.3.0\lib\net45\Castle.Core.dll</HintPath>
     </Reference>
@@ -316,17 +319,17 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\KB.Entity\KB.Entity.csproj">
-      <Project>{fb079767-3df2-435c-89d3-e15f3d975098}</Project>
-      <Name>KB.Entity</Name>
+    <ProjectReference Include="..\KB.DTO\KB.Dto.csproj">
+      <Project>{a1354cfc-15c7-48a8-85d6-b1a656c949f5}</Project>
+      <Name>KB.Dto</Name>
     </ProjectReference>
     <ProjectReference Include="..\KB.Infrastructure\KB.Infrastructure.csproj">
       <Project>{fe79d2df-6b23-4278-9c84-fc1d6487c45b}</Project>
       <Name>KB.Infrastructure</Name>
     </ProjectReference>
-    <ProjectReference Include="..\KB.Service\KB.Service.csproj">
+    <ProjectReference Include="..\KB.Service\KB.AppService.csproj">
       <Project>{7f485985-ba40-4b9d-a0a9-63486c82f0af}</Project>
-      <Name>KB.Service</Name>
+      <Name>KB.AppService</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
