--- a/KB.Repository/KB.Repository.csproj
+++ b/KB.Repository/KB.Repository.csproj
@@ -59,7 +59,7 @@
     <Compile Include="IRepositoryBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ArticleRepository.cs" />
-    <Compile Include="Repositories\IArticleRepository.cs" />
+    <Compile Include="Repositories\KnowlegeBaseRepository.cs" />
     <Compile Include="RepositoryBase.cs" />
   </ItemGroup>
   <ItemGroup>
