--- a/KB.Service/KB.AppService.csproj
+++ b/KB.Service/KB.AppService.csproj
@@ -52,6 +52,8 @@
   <ItemGroup>
     <Compile Include="Article\ArticleAppService.cs" />
     <Compile Include="Article\IArticleAppService.cs" />
+    <Compile Include="KnowlegeBase\IKnowlegeBaseAppService.cs" />
+    <Compile Include="KnowlegeBase\KnowlegeBaseAppService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
