--- a/KB.DTO/KB.Dto.csproj
+++ b/KB.DTO/KB.Dto.csproj
@@ -46,7 +46,7 @@
   <ItemGroup>
     <Compile Include="Article\ArticleCreateRequest.cs" />
     <Compile Include="Article\ArticleDetailResponse.cs" />
-    <Compile Include="Article\ArticleListReponse.cs" />
+    <Compile Include="Article\ArticleListResponse.cs" />
     <Compile Include="Article\ArticleUpdateRequest.cs" />
     <Compile Include="DtoMappings.cs" />
     <Compile Include="KB\KBCreateRequest.cs" />
@@ -54,6 +54,10 @@
     <Compile Include="KB\KBListResponse.cs" />
     <Compile Include="KB\KBUpdateRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tag\TagCreateRequest.cs" />
+    <Compile Include="Tag\TagDetailResponse.cs" />
+    <Compile Include="Tag\TagListResponse.cs" />
+    <Compile Include="Tag\TagUpdateRequest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
