--- a/KB.WebApi/KB.WebApi.csproj
+++ b/KB.WebApi/KB.WebApi.csproj
@@ -329,9 +329,9 @@
       <Project>{fe79d2df-6b23-4278-9c84-fc1d6487c45b}</Project>
       <Name>KB.Infrastructure</Name>
     </ProjectReference>
-    <ProjectReference Include="..\KB.Service\KB.AppService.csproj">
+    <ProjectReference Include="..\KB.Service\KB.BusinessService.csproj">
       <Project>{7f485985-ba40-4b9d-a0a9-63486c82f0af}</Project>
-      <Name>KB.AppService</Name>
+      <Name>KB.BusinessService</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
