--- a/KB.Service/KB.BusinessService.csproj
+++ b/KB.Service/KB.BusinessService.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="Article\ArticleService.cs" />
     <Compile Include="Article\IArticleService.cs" />
+    <Compile Include="BusinessServiceIocFacility.cs" />
     <Compile Include="KnowlegeBase\IKnowlegeBaseService.cs" />
     <Compile Include="KnowlegeBase\KnowlegeBaseService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
