try to switch db at runtime.

--- a/KB.Entity/KB.Entity.csproj
+++ b/KB.Entity/KB.Entity.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\KBDataContext.cs" />
     <Compile Include="KBDataContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="t_KB_Article.cs" />
