--- a/KB.WebApi/Web.config
+++ b/KB.WebApi/Web.config
@@ -12,6 +12,8 @@
     <add name="KBDataContext" connectionString="data source=localhost;initial catalog=KB;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
+    <add key="log4net.Config" value="log4net.config" />
+    <add key="log4net.Config.Watch" value="True" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
