--- a/KB.DTO/KB.Object.csproj
+++ b/KB.DTO/KB.Object.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7F485985-BA40-4B9D-A0A9-63486C82F0AF}</ProjectGuid>
+    <ProjectGuid>{A1354CFC-15C7-48A8-85D6-B1A656C949F5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>KB.BusinessService</RootNamespace>
-    <AssemblyName>KB.BusinessService</AssemblyName>
+    <RootNamespace>KB.Object</RootNamespace>
+    <AssemblyName>KB.Object</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -34,13 +33,8 @@
     <Reference Include="AutoMapper, Version=6.0.2.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
       <HintPath>..\packages\AutoMapper.6.0.2\lib\net45\AutoMapper.dll</HintPath>
     </Reference>
-    <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
-      <HintPath>..\packages\Castle.Core.3.3.0\lib\net45\Castle.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Castle.Windsor, Version=3.4.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
-      <HintPath>..\packages\Castle.Windsor.3.4.0\lib\net45\Castle.Windsor.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -50,35 +44,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Article\ArticleService.cs" />
-    <Compile Include="Article\IArticleService.cs" />
-    <Compile Include="BusinessServiceIocFacility.cs" />
-    <Compile Include="KnowlegeBase\IKnowlegeBaseService.cs" />
-    <Compile Include="KnowlegeBase\KnowlegeBaseService.cs" />
+    <Compile Include="Articles\Article.cs" />
+    <Compile Include="Articles\ArticleDetail.cs" />
+    <Compile Include="DtoMappings.cs" />
+    <Compile Include="KB\KnowlegeBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tag\ITagService.cs" />
-    <Compile Include="Tag\TagService.cs" />
+    <Compile Include="Tags\Tag.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <ProjectReference Include="..\KB.DTO\KB.Dto.csproj">
-      <Project>{a1354cfc-15c7-48a8-85d6-b1a656c949f5}</Project>
-      <Name>KB.Dto</Name>
-    </ProjectReference>
     <ProjectReference Include="..\KB.Entity\KB.Entity.csproj">
       <Project>{fb079767-3df2-435c-89d3-e15f3d975098}</Project>
       <Name>KB.Entity</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\KB.Infrastructure\KB.Infrastructure.csproj">
-      <Project>{fe79d2df-6b23-4278-9c84-fc1d6487c45b}</Project>
-      <Name>KB.Infrastructure</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\KB.Repository\KB.Repository.csproj">
-      <Project>{4f7dbfec-3a4e-410c-9c32-d092e50aaa7b}</Project>
-      <Name>KB.Repository</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
