--- a/KB.Infrastructure/KB.Framework.csproj
+++ b/KB.Infrastructure/KB.Framework.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{FE79D2DF-6B23-4278-9C84-FC1D6487C45B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>KB.Infrastructure</RootNamespace>
-    <AssemblyName>KB.Infrastructure</AssemblyName>
+    <RootNamespace>KB.Framework</RootNamespace>
+    <AssemblyName>KB.Framework</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
