--- a/KB.Repository/KB.Repository.csproj
+++ b/KB.Repository/KB.Repository.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Articles\IArticlesTagsRelationRepository.cs" />
     <Compile Include="DbContextFactory.cs" />
     <Compile Include="IRepositoryBase.cs" />
+    <Compile Include="KBDataContext.cs" />
     <Compile Include="KnowlegeBases\IKnowlegeBaseRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Articles\ArticleRepository.cs" />
@@ -85,9 +86,9 @@
       <Project>{fb079767-3df2-435c-89d3-e15f3d975098}</Project>
       <Name>KB.Entity</Name>
     </ProjectReference>
-    <ProjectReference Include="..\KB.Infrastructure\KB.Framework.csproj">
+    <ProjectReference Include="..\KB.Infrastructure\KB.Infrastructure.csproj">
       <Project>{fe79d2df-6b23-4278-9c84-fc1d6487c45b}</Project>
-      <Name>KB.Framework</Name>
+      <Name>KB.Infrastructure</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
