--- a/KB.Entity/KB.Entity.csproj
+++ b/KB.Entity/KB.Entity.csproj
@@ -50,9 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Extensions\KBDataContext.cs" />
-    <Compile Include="KBDataContext.cs" />
-    <Compile Include="KBEntityBase.cs" />
+    <Compile Include="KBEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Article.cs" />
     <Compile Include="ArticleTags.cs" />
