--- a/KB.ApplicationService/KB.ApplicationService.csproj
+++ b/KB.ApplicationService/KB.ApplicationService.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4F7DBFEC-3A4E-410C-9C32-D092E50AAA7B}</ProjectGuid>
+    <ProjectGuid>{349CD324-CB06-46E7-97F1-33AF7EA446FF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>KB.Repository</RootNamespace>
-    <AssemblyName>KB.Repository</AssemblyName>
+    <RootNamespace>KB.ApplicationService</RootNamespace>
+    <AssemblyName>KB.ApplicationService</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,24 +30,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=6.0.2.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.6.0.2\lib\net45\AutoMapper.dll</HintPath>
+    </Reference>
     <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\Castle.Core.3.3.0\lib\net45\Castle.Core.dll</HintPath>
     </Reference>
     <Reference Include="Castle.Windsor, Version=3.4.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\Castle.Windsor.3.4.0\lib\net45\Castle.Windsor.dll</HintPath>
     </Reference>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -57,31 +50,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Repositories\IArticleRepository.cs" />
-    <Compile Include="Repositories\IArticlesTagsRelationRepository.cs" />
-    <Compile Include="DbContextFactory.cs" />
-    <Compile Include="IRepositoryBase.cs" />
-    <Compile Include="KBDataContext.cs" />
-    <Compile Include="Repositories\IKnowlegeBaseRepository.cs" />
+    <Compile Include="AppServices\ArticleAppService.cs" />
+    <Compile Include="AppServices\IArticleAppService.cs" />
+    <Compile Include="AppServiceIocFacility.cs" />
+    <Compile Include="AppServices\IKnowlegeBaseAppService.cs" />
+    <Compile Include="AppServices\KnowlegeBaseAppService.cs" />
+    <Compile Include="Dto\Articles\ArticleDetail.cs" />
+    <Compile Include="Dto\Articles\ArticleInfo.cs" />
+    <Compile Include="Dto\DtoMappings.cs" />
+    <Compile Include="Dto\KB\KnowlegeBaseInfo.cs" />
+    <Compile Include="Dto\Tags\TagInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\ArticleRepository.cs" />
-    <Compile Include="Repositories\ArticlesTagsRelationRepository.cs" />
-    <Compile Include="Repositories\KnowlegeBaseRepository.cs" />
-    <Compile Include="Repositories\ITagRepository.cs" />
-    <Compile Include="Repositories\TagRepository.cs" />
-    <Compile Include="RepositoryBase.cs" />
-    <Compile Include="RepositoryIocInitializer.cs" />
+    <Compile Include="AppServices\ITagAppService.cs" />
+    <Compile Include="AppServices\TagAppService.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
-  </ItemGroup>
-  <ItemGroup>
+    <ProjectReference Include="..\KB.DomainService\KB.DomainService.csproj">
+      <Project>{7f485985-ba40-4b9d-a0a9-63486c82f0af}</Project>
+      <Name>KB.DomainService</Name>
+    </ProjectReference>
     <ProjectReference Include="..\KB.Entity\KB.Entity.csproj">
       <Project>{fb079767-3df2-435c-89d3-e15f3d975098}</Project>
       <Name>KB.Entity</Name>
@@ -91,5 +78,9 @@
       <Name>KB.Infrastructure</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
