--- a/KB.UnitTest/KB.UnitTest.csproj
+++ b/KB.UnitTest/KB.UnitTest.csproj
@@ -71,7 +71,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BizService\ArticleServiceTest.cs" />
+    <Compile Include="DomainServices\ArticleServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -79,6 +79,14 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\KB.ApplicationService\KB.ApplicationService.csproj">
+      <Project>{349cd324-cb06-46e7-97f1-33af7ea446ff}</Project>
+      <Name>KB.ApplicationService</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\KB.DomainService\KB.DomainService.csproj">
+      <Project>{7f485985-ba40-4b9d-a0a9-63486c82f0af}</Project>
+      <Name>KB.DomainService</Name>
+    </ProjectReference>
     <ProjectReference Include="..\KB.Entity\KB.Entity.csproj">
       <Project>{FB079767-3DF2-435C-89D3-E15F3D975098}</Project>
       <Name>KB.Entity</Name>
@@ -90,10 +98,6 @@
     <ProjectReference Include="..\KB.Repository\KB.Repository.csproj">
       <Project>{4F7DBFEC-3A4E-410C-9C32-D092E50AAA7B}</Project>
       <Name>KB.Repository</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\KB.Service\KB.DomainService.csproj">
-      <Project>{7f485985-ba40-4b9d-a0a9-63486c82f0af}</Project>
-      <Name>KB.DomainService</Name>
     </ProjectReference>
     <ProjectReference Include="..\KB.WebApi\KB.WebApi.csproj">
       <Project>{1e4bba68-4aa4-4116-a7df-b78c27ed6545}</Project>
