--- a/KB.WebApi/KB.WebApi.csproj
+++ b/KB.WebApi/KB.WebApi.csproj
@@ -326,9 +326,9 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\KB.ApplicationService\KB.ApplicationService.csproj">
+    <ProjectReference Include="..\KB.ApplicationService\KB.Application.csproj">
       <Project>{349cd324-cb06-46e7-97f1-33af7ea446ff}</Project>
-      <Name>KB.ApplicationService</Name>
+      <Name>KB.Application</Name>
     </ProjectReference>
     <ProjectReference Include="..\KB.Infrastructure\KB.Infrastructure.csproj">
       <Project>{fe79d2df-6b23-4278-9c84-fc1d6487c45b}</Project>
