--- a/KB.ApplicationService/KB.Application.csproj
+++ b/KB.ApplicationService/KB.Application.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{349CD324-CB06-46E7-97F1-33AF7EA446FF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>KB.ApplicationService</RootNamespace>
-    <AssemblyName>KB.ApplicationService</AssemblyName>
+    <RootNamespace>KB.Application</RootNamespace>
+    <AssemblyName>KB.Application</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -50,28 +50,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppServices\ArticleAppService.cs" />
-    <Compile Include="AppServices\IArticleAppService.cs" />
-    <Compile Include="AppServiceIocFacility.cs" />
-    <Compile Include="AppServices\IKnowlegeBaseAppService.cs" />
-    <Compile Include="AppServices\KnowlegeBaseAppService.cs" />
+    <Compile Include="Services\ArticleAppService.cs" />
+    <Compile Include="Services\IArticleAppService.cs" />
+    <Compile Include="ApplicationIocFacility.cs" />
+    <Compile Include="Services\IKnowlegeBaseAppService.cs" />
+    <Compile Include="Services\KnowlegeBaseAppService.cs" />
     <Compile Include="Dto\Articles\ArticleDetail.cs" />
     <Compile Include="Dto\Articles\ArticleInfo.cs" />
-    <Compile Include="Dto\DtoMappings.cs" />
+    <Compile Include="DtoMappings.cs" />
     <Compile Include="Dto\KB\KnowlegeBaseInfo.cs" />
     <Compile Include="Dto\Tags\TagInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="AppServices\ITagAppService.cs" />
-    <Compile Include="AppServices\TagAppService.cs" />
+    <Compile Include="Services\ITagAppService.cs" />
+    <Compile Include="Services\TagAppService.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\KB.DomainService\KB.DomainService.csproj">
+    <ProjectReference Include="..\KB.DomainService\KB.Domain.csproj">
       <Project>{7f485985-ba40-4b9d-a0a9-63486c82f0af}</Project>
-      <Name>KB.DomainService</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\KB.Entity\KB.Entity.csproj">
-      <Project>{fb079767-3df2-435c-89d3-e15f3d975098}</Project>
-      <Name>KB.Entity</Name>
+      <Name>KB.Domain</Name>
     </ProjectReference>
     <ProjectReference Include="..\KB.Infrastructure\KB.Infrastructure.csproj">
       <Project>{fe79d2df-6b23-4278-9c84-fc1d6487c45b}</Project>
