--- a/KB.DomainService/KB.Domain.csproj
+++ b/KB.DomainService/KB.Domain.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{7F485985-BA40-4B9D-A0A9-63486C82F0AF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>KB.DomainService</RootNamespace>
-    <AssemblyName>KB.DomainService</AssemblyName>
+    <RootNamespace>KB.Domain</RootNamespace>
+    <AssemblyName>KB.Domain</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -31,16 +31,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AutoMapper, Version=6.0.2.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
-      <HintPath>..\packages\AutoMapper.6.0.2\lib\net45\AutoMapper.dll</HintPath>
-    </Reference>
     <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\Castle.Core.3.3.0\lib\net45\Castle.Core.dll</HintPath>
     </Reference>
     <Reference Include="Castle.Windsor, Version=3.4.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\Castle.Windsor.3.4.0\lib\net45\Castle.Windsor.dll</HintPath>
     </Reference>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
@@ -51,9 +56,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DbContextFactory.cs" />
+    <Compile Include="Entities\Article.cs" />
+    <Compile Include="Entities\ArticleTags.cs" />
+    <Compile Include="Entities\Category.cs" />
+    <Compile Include="Entities\Comm100System.cs" />
+    <Compile Include="Entities\KBEntity.cs" />
+    <Compile Include="Entities\KnowledgeBase.cs" />
+    <Compile Include="Entities\Tag.cs" />
+    <Compile Include="KBDataContext.cs" />
+    <Compile Include="Repositories\ArticleRepository.cs" />
+    <Compile Include="Repositories\ArticlesTagsRelationRepository.cs" />
+    <Compile Include="Repositories\IArticleRepository.cs" />
+    <Compile Include="Repositories\IArticlesTagsRelationRepository.cs" />
+    <Compile Include="Repositories\IKnowlegeBaseRepository.cs" />
+    <Compile Include="Repositories\IRepositoryBase.cs" />
+    <Compile Include="Repositories\ITagRepository.cs" />
+    <Compile Include="Repositories\KnowlegeBaseRepository.cs" />
+    <Compile Include="Repositories\RepositoryBase.cs" />
+    <Compile Include="Repositories\TagRepository.cs" />
     <Compile Include="Services\ArticleService.cs" />
     <Compile Include="Services\IArticleService.cs" />
-    <Compile Include="DomainServiceIocInitializer.cs" />
+    <Compile Include="DomainIocInitializer.cs" />
     <Compile Include="Services\IKnowlegeBaseService.cs" />
     <Compile Include="Services\KnowlegeBaseService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -65,17 +89,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\KB.Entity\KB.Entity.csproj">
-      <Project>{fb079767-3df2-435c-89d3-e15f3d975098}</Project>
-      <Name>KB.Entity</Name>
-    </ProjectReference>
     <ProjectReference Include="..\KB.Infrastructure\KB.Infrastructure.csproj">
       <Project>{fe79d2df-6b23-4278-9c84-fc1d6487c45b}</Project>
       <Name>KB.Infrastructure</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\KB.Repository\KB.Repository.csproj">
-      <Project>{4f7dbfec-3a4e-410c-9c32-d092e50aaa7b}</Project>
-      <Name>KB.Repository</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
